objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Autre_acteur_Phyto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autre acteur Phyto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificat_individuel_de_reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificat individuel de référence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Niveau_d_influence__c</fullName>
        <label>Niveau d&apos;Influcence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Influenceur</fullName>
                </value>
                <value>
                    <fullName>Décideur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_N_1__c</fullName>
        <description>Champs historique pour sauvegarder l&apos;ancienne valeur du rôle</description>
        <label>Rôle N-1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>AGT</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>ASS</fullName>
                </value>
                <value>
                    <fullName>BOU</fullName>
                </value>
                <value>
                    <fullName>BOP</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>COU</fullName>
                </value>
                <value>
                    <fullName>DIR</fullName>
                </value>
                <value>
                    <fullName>EXE</fullName>
                </value>
                <value>
                    <fullName>GER</fullName>
                </value>
                <value>
                    <fullName>LOG</fullName>
                </value>
                <value>
                    <fullName>MBR</fullName>
                </value>
                <value>
                    <fullName>PAT</fullName>
                </value>
                <value>
                    <fullName>REC</fullName>
                </value>
                <value>
                    <fullName>RES</fullName>
                </value>
                <value>
                    <fullName>TEC</fullName>
                </value>
                <value>
                    <fullName>VEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isContactPrincipal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Principal</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Toutes_les_relations</fullName>
        <columns>CONTACT.FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.ACCOUNT_NAME</columns>
        <columns>ACCCONRELATION.ROLES</columns>
        <filterScope>Everything</filterScope>
        <label>Toutes les relations</label>
        <language>fr</language>
        <sharedTo>
            <group>Referentiel_Groupe</group>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>ACR_VR01_Info_Certiphyto_obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>/*Bypass*/
!$Setup.CS01_Bypass__c.Bypass_ValidationRule__c
&amp;&amp;
IF(ISBLANK($Setup.CS01_Bypass__c.Bypass_VRbyVR__c),TRUE,
!CONTAINS($Setup.CS01_Bypass__c.Bypass_VRbyVR__c,&apos;ACR_VR01&apos;))
&amp;&amp;
IF(ISBLANK($Setup.CS01_Bypass__c.Bypass_VRbyObject__c),TRUE,
!CONTAINS($Setup.CS01_Bypass__c.Bypass_VRbyObject__c,&apos;AccountContactRelation&apos;))
&amp;&amp;
/*Business Rule*/
Certificat_individuel_de_reference__c = true
&amp;&amp;
( ISBLANK(Contact.Date_de_Validite_du_certificat__c)
||
ISBLANK( Contact.Numero_du_certificat_individuel__c )
)</errorConditionFormula>
        <errorMessage>ACR_VR01 - La date de validité du certificat et le numéro du certificat individuel / Agrément</errorMessage>
    </validationRules>
</CustomObject>